# wohl

./: .dockerignore  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE_INTEGRATION.md  deny.toml  rivet.yaml  wohl.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  compliance.yml  nightly-fuzz.yml  release.yml  scry-gate.yml  verification-gate.yml  verified-line-guard.yml  witness-gate.yml
artifacts/swarch/: SWARCH-WOHL-001.yaml  SWARCH-WOHL-002.yaml  SWARCH-WOHL-003.yaml  SWARCH-WOHL-004.yaml  SWARCH-WOHL-005.yaml  SWARCH-WOHL-006.yaml  SWARCH-WOHL-007.yaml  SWARCH-WOHL-008.yaml
artifacts/swdd/: SWDD-AIR-001.yaml  SWDD-ALERT-001.yaml  SWDD-DOOR-001.yaml  SWDD-LEAK-001.yaml  SWDD-MATTER-001.yaml  SWDD-POWER-001.yaml  SWDD-TEMP-001.yaml
artifacts/swreq/: SWREQ-AIR-001.yaml  SWREQ-AIR-002.yaml  SWREQ-ALERT-001.yaml  SWREQ-ALERT-002.yaml  SWREQ-DOOR-001.yaml  SWREQ-DOOR-002.yaml  SWREQ-LEAK-001.yaml  SWREQ-LEAK-002.yaml  SWREQ-LEAK-003.yaml  SWREQ-MATTER-001.yaml  SWREQ-MATTER-002.yaml  SWREQ-MATTER-003.yaml  SWREQ-MATTER-004.yaml  SWREQ-MATTER-005.yaml  SWREQ-OTA-001.yaml  SWREQ-TEMP-001.yaml  SWREQ-TEMP-002.yaml  SWREQ-TEMP-003.yaml
artifacts/sysreq/: STKH-WOHL-001.yaml  SYSREQ-WOHL-001.yaml  SYSREQ-WOHL-002.yaml  SYSREQ-WOHL-003.yaml  SYSREQ-WOHL-004.yaml  SYSREQ-WOHL-005.yaml  SYSREQ-WOHL-006.yaml  SYSREQ-WOHL-007.yaml  SYSREQ-WOHL-008.yaml
artifacts/verification/: FV-ALERT-001.yaml  IV-WOHL-001.yaml  SV-WOHL-001.yaml  SV-WOHL-002.yaml  SV-WOHL-003.yaml  SV-WOHL-004.yaml  SV-WOHL-005.yaml  SV-WOHL-006.yaml  SV-WOHL-007.yaml  SV-WOHL-008.yaml  SWV-MATTER-001.yaml  SWV-MATTER-002.yaml  SWV-OTA-001.yaml  SWV-WOHL-001.yaml  SWV-WOHL-002.yaml  SWV-WOHL-003.yaml  SWV-WOHL-004.yaml  SWV-WOHL-005.yaml  UV-AIR-001.yaml  UV-ALERT-001.yaml  UV-DOOR-001.yaml  UV-LEAK-001.yaml  UV-MATTER-001.yaml  UV-POWER-001.yaml  UV-TEMP-001.yaml
boards/stm32g0/: README.md
crates/wohl-air/: Cargo.toml
crates/wohl-air/plain/src/: core.rs  engine.rs
crates/wohl-air/src/: engine.rs  wasm_component.rs
crates/wohl-air/wit/: air_quality.wit
crates/wohl-alert/: Cargo.toml
crates/wohl-alert/plain/src/: core.rs  engine.rs
crates/wohl-alert/src/: core.rs  wasm_component.rs
crates/wohl-alert/wit/: alert.wit
crates/wohl-door/: Cargo.toml
crates/wohl-door/plain/src/: engine.rs
crates/wohl-door/src/: engine.rs  wasm_component.rs
crates/wohl-door/wit/: door_watch.wit
crates/wohl-fw-door/: Cargo.toml  memory.x
crates/wohl-fw-door-bench/: Cargo.toml  build.rs  memory.x
crates/wohl-fw-door-bench/.cargo/: config.toml
crates/wohl-fw-door-bench/src/: ccsds.rs  lib.rs  main.rs
crates/wohl-fw-door/.cargo/: config.toml
crates/wohl-fw-door/src/: debounce.rs  door.rs  lib.rs  main.rs
crates/wohl-hub/: Cargo.toml
crates/wohl-hub/src/: main.rs
crates/wohl-integration/: Cargo.toml
crates/wohl-integration/src/: lib.rs
crates/wohl-leak/: Cargo.toml
crates/wohl-leak/plain/src/: core.rs  engine.rs
crates/wohl-leak/src/: engine.rs  wasm_component.rs
crates/wohl-leak/wasm/: Cargo.toml
crates/wohl-leak/wit/: leak.wit
crates/wohl-matter-bridge/: Cargo.toml  DESIGN.md  README.md
crates/wohl-matter-bridge/examples/: matter-device.rs
crates/wohl-matter-bridge/src/: cache.rs  cluster.rs  commissioning.rs  conversion.rs  lib.rs  logging.rs  rs_matter.rs  types.rs
crates/wohl-matter-core/attestation/: README.md  sign-verify.sh
crates/wohl-matter-core/compose/src/: mcore.rs  transport.rs
crates/wohl-matter-core/compose/wit/: compose.wit
crates/wohl-matter-core/spike2-exec/: Cargo.toml  README.md
crates/wohl-matter-core/spike2-exec/src/: main.rs
crates/wohl-matter-core/spike2c-compose/: README.md
crates/wohl-matter-core/spike2c-compose/mcore/: Cargo.toml
crates/wohl-matter-core/spike2c-compose/mcore/src/: main.rs
crates/wohl-matter-core/spike2c-compose/transport/: Cargo.toml
crates/wohl-matter-core/spike2c-compose/transport/src/: lib.rs
crates/wohl-matter-core/spike2c-compose/wit/: world.wit
crates/wohl-matter-core/src/: wasm_component.rs
crates/wohl-matter-core/wit/: matter-core.wit
crates/wohl-matter-core/witness/: Cargo.toml  README.md  run-scry.sh  run-witness.sh
crates/wohl-matter-core/witness/src/: lib.rs
crates/wohl-ota/: Cargo.toml
crates/wohl-ota/plain/src/: engine.rs  lib.rs
crates/wohl-power/: Cargo.toml
crates/wohl-power/plain/src/: core.rs  engine.rs
crates/wohl-power/src/: core.rs  wasm_component.rs
crates/wohl-power/wit/: power.wit
crates/wohl-temp/: Cargo.toml
crates/wohl-temp/plain/src/: core.rs  engine.rs
crates/wohl-temp/src/: core.rs  wasm_component.rs
crates/wohl-temp/wit/: temperature.wit
deploy/docker/: docker-compose.yml
deploy/systemd/: wohl-hub.service
docs/: INSTALL.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_air.rs  fuzz_alert.rs  fuzz_door.rs  fuzz_leak.rs  fuzz_ota.rs  fuzz_power.rs  fuzz_temp.rs
proofs/verus/: BUILD.bazel  README.md  alert_dedup.rs
safety/ai-act/: ai-act.yaml
safety/stpa/: control-structure.yaml  controller-constraints.yaml  hazards.yaml  loss-scenarios.yaml  losses.yaml  stpa.yaml  ucas.yaml
safety/stpa-sec/: sec-constraints.yaml  sec-hazards.yaml  sec-losses.yaml  stpa-sec.yaml
spar/: wohl_firmware.aadl  wohl_hardware.aadl  wohl_home.aadl  wohl_matter.aadl  wohl_nodes.aadl  wohl_properties.aadl  wohl_system.aadl
tools/: run-wohl-verification.py
wit/components/air-quality/: component.wit
wit/components/alert-dispatcher/: component.wit
wit/components/door-watch/: component.wit
wit/components/power-meter/: component.wit
wit/components/temperature-monitor/: component.wit
wit/components/water-leak/: component.wit
wit/interfaces/wohl-actuators/: actuators.wit
wit/interfaces/wohl-rules/: rules.wit
wit/interfaces/wohl-sensors/: sensors.wit
wit/worlds/: wohl-sensor-node.wit  wohl.wit
