load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")
load("@rules_wasm_component//wit:defs.bzl", "wit_library")

package(default_visibility = ["//visibility:public"])

# ═══════════════════════════════════════════════════════════════
# Water Leak Detector
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "wohl_leak_wit",
    srcs = ["crates/wohl-leak/wit/leak.wit"],
    package_name = "pulseengine:wohl-leak",
    world = "wohl-leak",
)

rust_wasm_component_bindgen(
    name = "wohl-leak",
    srcs = ["crates/wohl-leak/src/wasm_component.rs"],
    wit = ":wohl_leak_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Temperature Monitor
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "wohl_temperature_wit",
    srcs = ["crates/wohl-temp/wit/temperature.wit"],
    package_name = "pulseengine:wohl-temperature",
    world = "wohl-temperature",
)

rust_wasm_component_bindgen(
    name = "wohl-temp",
    srcs = ["crates/wohl-temp/src/wasm_component.rs"],
    wit = ":wohl_temperature_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Air Quality Monitor
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "wohl_air_quality_wit",
    srcs = ["crates/wohl-air/wit/air_quality.wit"],
    package_name = "pulseengine:wohl-air-quality",
    world = "wohl-air-quality",
)

rust_wasm_component_bindgen(
    name = "wohl-air",
    srcs = ["crates/wohl-air/src/wasm_component.rs"],
    wit = ":wohl_air_quality_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Door Watch
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "wohl_door_watch_wit",
    srcs = ["crates/wohl-door/wit/door_watch.wit"],
    package_name = "pulseengine:wohl-door-watch",
    world = "wohl-door-watch",
)

rust_wasm_component_bindgen(
    name = "wohl-door",
    srcs = ["crates/wohl-door/src/wasm_component.rs"],
    wit = ":wohl_door_watch_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Power Meter
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "wohl_power_meter_wit",
    srcs = ["crates/wohl-power/wit/power.wit"],
    package_name = "pulseengine:wohl-power-meter",
    world = "wohl-power-meter",
)

rust_wasm_component_bindgen(
    name = "wohl-power",
    srcs = ["crates/wohl-power/src/wasm_component.rs"],
    wit = ":wohl_power_meter_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Alert Dispatcher
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "wohl_alert_dispatcher_wit",
    srcs = ["crates/wohl-alert/wit/alert.wit"],
    package_name = "pulseengine:wohl-alert-dispatcher",
    world = "wohl-alert-dispatcher",
)

rust_wasm_component_bindgen(
    name = "wohl-alert",
    srcs = ["crates/wohl-alert/src/wasm_component.rs"],
    wit = ":wohl_alert_dispatcher_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Matter Core — rs-matter protocol core as a WASM component (SPIKE)
# SWARCH-WOHL-008: proves the Matter core (TLV / secure channel /
# RustCrypto / data model) builds into a component via rules_wasm_component,
# with rs-matter supplied from wohl's OWN crate universe
# (@wohl_crates//:rs-matter, rustcrypto only, no os/sockets). Transport
# stays host-side.
#
# IMPORTANT — @wohl_crates, NOT @crates. bzlmod merges every module's
# usage of the @rules_rust//crate_universe%crate extension. The local
# `rules_wasm_component` override registers its own universe under the
# canonical name `crates` (anyhow/clap/tokio/wit-bindgen-0.56…), and
# wohl's `use_repo(crate, "wohl_crates", "crates")` pulls that foreign
# repo into scope too. So a bare `@crates//:…` here resolves to
# rules_wasm_component's universe — which has no rs-matter — yielding
# "target 'rs-matter' not declared" (CI run 26651242532 confirmed:
# @crates exposed clap/reqwest/tokio, never matter). Wohl's universe,
# seeded from //crates/wohl-leak/wasm:Cargo.{toml,lock}, is @wohl_crates
# and is where rs-matter actually lives. The monitor bindgen rules only
# appeared to work via @crates because both universes happen to carry
# wit-bindgen + bitflags.
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "wohl_matter_core_wit",
    srcs = ["crates/wohl-matter-core/wit/matter-core.wit"],
    package_name = "pulseengine:wohl-matter-core",
    world = "wohl-matter-core",
)

rust_wasm_component_bindgen(
    name = "wohl-matter-core",
    srcs = ["crates/wohl-matter-core/src/wasm_component.rs"],
    wit = ":wohl_matter_core_wit",
    deps = ["@wohl_crates//:rs-matter"],
    wasi_version = "p3",
    profiles = ["release"],
)
