[workspace]
resolver = "3"
members = [
    "crates/wohl-leak",
    "crates/wohl-temp",
    "crates/wohl-air",
    "crates/wohl-door",
    "crates/wohl-power",
    "crates/wohl-alert",
    "crates/wohl-integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pulseengine/wohl"
rust-version = "1.85.0"

[workspace.dependencies]
relay-lc = { path = "../relay/crates/relay-lc" }
relay-sc = { path = "../relay/crates/relay-sc" }
relay-sch = { path = "../relay/crates/relay-sch" }
relay-to = { path = "../relay/crates/relay-to" }
wohl-leak = { path = "crates/wohl-leak" }
wohl-temp = { path = "crates/wohl-temp" }
wohl-air = { path = "crates/wohl-air" }
wohl-door = { path = "crates/wohl-door" }
wohl-power = { path = "crates/wohl-power" }
wohl-alert = { path = "crates/wohl-alert" }
proptest = "1"
