module(
    name = "wohl",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "rules_wasm_component", version = "0.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

# ── rules_verus (Verus SMT verification) ────────────────────────────────
# Used by //proofs/verus for the AlertDispatcher dedup + rate-limit proofs.

bazel_dep(name = "rules_verus", version = "0.1.0")

git_override(
    module_name = "rules_verus",
    remote = "https://github.com/pulseengine/rules_verus.git",
    commit = "fc7b63692b1d2d91511f04507b814187932cd733",
)

verus = use_extension("@rules_verus//verus:extensions.bzl", "verus")
verus.toolchain(version = "0.2026.02.15")
use_repo(verus, "verus_toolchains")

register_toolchains("@verus_toolchains//:all")

# ── rules_rocq_rust (Rocq theorem-proving rules) ────────────────────────
# Pinned for reproducibility. wohl has no proofs/rocq/ yet, so the Rocq
# toolchain extension is intentionally deferred — when rocq proofs land,
# follow the rivet integration pattern (toolchain + nixpkgs + register).

bazel_dep(name = "rules_rocq_rust", version = "0.1.0")

git_override(
    module_name = "rules_rocq_rust",
    remote = "https://github.com/pulseengine/rules_rocq_rust.git",
    # e4660cc: build: migrate rocq-of-rust to a hermetic rules_rust toolchain (#34).
    commit = "e4660cc1b06fc4c0aefb49401fa2e2184cf804e3",
)

# rules_rocq_rust's module extension unconditionally creates the
# rocq_toolchains repo via a nixpkgs package, even before any rocq rule
# is loaded. That requires `nix-build` on PATH (local dev: install nix;
# CI: see the install step in the verus job). The nixpkgs commit below
# mirrors rivet — keep them in lock-step until we have a reason to
# diverge.
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")

nix_repo = use_extension(
    "@rules_nixpkgs_core//extensions:repository.bzl",
    "nix_repo",
)
nix_repo.github(
    name = "nixpkgs",
    org = "NixOS",
    repo = "nixpkgs",
    # nixos-unstable with Rocq 9.0.1 (matches pulseengine/rivet's pin).
    commit = "aca4d95fce4914b3892661bcb80b8087293536c6",
    sha256 = "",
)
use_repo(nix_repo, "nixpkgs")

local_path_override(
    module_name = "rules_wasm_component",
    path = "../rules_wasm_component",
)

git_override(
    module_name = "rules_rust",
    commit = "6281d27f3ffdb826df90db25c1dc66a198345d64",
    remote = "https://github.com/bazelbuild/rules_rust.git",
)

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "wohl_crates",
    cargo_lockfile = "//crates/wohl-leak/wasm:Cargo.lock",
    manifests = ["//crates/wohl-leak/wasm:Cargo.toml"],
    supported_platform_triples = [
        "wasm32-wasip2",
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "wohl_crates", "crates")
