[package]
name = "wohl-hub"
description = "Wohl Hub — home supervision system wiring 7 Relay engines"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85.0"

[[bin]]
name = "wohl-hub"
path = "src/main.rs"

[dependencies]
# Wohl components
wohl-leak.workspace = true
wohl-temp.workspace = true
wohl-air.workspace = true
wohl-door.workspace = true
wohl-power.workspace = true
wohl-alert.workspace = true

# Relay engines
relay-lc.workspace = true
relay-sch.workspace = true
relay-hs.workspace = true
relay-ds.workspace = true
relay-hk.workspace = true
relay-tbl.workspace = true
relay-cs.workspace = true
relay-to.workspace = true

# Runtime
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
