[package]
name = "wohl-matter-bridge"
description = "Wohl Matter Bridge — hub-side translation of Wohl alerts / sensor readings into Matter bridged-endpoint attributes"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

# 0.3.0-architecture: the `rs-matter-backend` feature gates the typed
# skeleton (`RsMatterBridge`) that future PRs flesh out with the live
# rs-matter wiring. The feature exists today as a *symbol gate* — turning
# it on compiles the `rs_matter` module so callers can already write
# `#[cfg(feature = "rs-matter-backend")] let bridge = RsMatterBridge::new(..);`.
# rs-matter is NOT yet a real dependency: the skeleton's methods return
# `unimplemented!()` and the wire integration is the 0.3.x implementation
# PR. See DESIGN.md §3 "rs-matter target version" and SWARCH-WOHL-007.
#
# When the live integration lands, this feature will pull in:
#   rs-matter = { version = "...", optional = true, default-features = false,
#                 features = ["std", "rustcrypto"] }
# behind `dep:rs-matter`. Until then the feature has no transitive deps,
# so it can be turned on freely without lockfile churn.

[features]
default = []
rs-matter-backend = []

[dependencies]

[dev-dependencies]

[lints]
workspace = true
