[package]
name = "wohl-matter-bridge"
description = "Wohl Matter Bridge — hub-side translation of Wohl alerts / sensor readings into Matter bridged-endpoint attributes"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.87.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

# The `rs-matter-backend` feature gates the live rs-matter wiring in
# `src/rs_matter.rs`. Turn it on to compile against the Matter stack;
# leave it off for cargo builds that don't need Matter (e.g. CI on the
# verified line).
#
# rs-matter is pinned by git rev — crates.io `rs-matter = "0.1.0"` is
# from July 2023 and predates the current API surface entirely (no
# `DirKvBlobStore`, no `Matter::init`, different module layout). The
# pin is bumped deliberately when upstream stabilises a relevant
# change; see DESIGN.md §3 for the version-pin policy.

[features]
default = []
rs-matter-backend = ["dep:rs-matter"]

[dependencies]
# Pinned to project-chip/rs-matter @ 0030ba4a99 (HEAD as of 2026-05-26
# per the rs-matter API exploration agent). MSRV 1.87 declared by
# that revision. License Apache-2.0 (passes deny.toml allowlist).
rs-matter = { git = "https://github.com/project-chip/rs-matter", rev = "0030ba4a99", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]

[lints]
workspace = true
