[package]
name = "wohl-temp"
description = "Wohl Temperature Monitor — verified freeze/overheat/rate detection"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85.0"

[lib]
path = "plain/src/lib.rs"
crate-type = ["rlib"]

[dependencies]
relay-lc.workspace = true

[dev-dependencies]
proptest.workspace = true
